[gd_scene load_steps=8 format=3 uid="uid://cjkxm4pqh8wpr"]

[ext_resource type="Script" path="res://scripts/ui/player_hud.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.1, 0.1, 0.1, 0.8)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_health_bg"]
bg_color = Color(0.2, 0.05, 0.05, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_health_fill"]
bg_color = Color(0.8, 0.2, 0.2, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mana_bg"]
bg_color = Color(0.05, 0.05, 0.2, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mana_fill"]
bg_color = Color(0.2, 0.4, 0.9, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_swing_bg"]
bg_color = Color(0.15, 0.15, 0.15, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_swing_fill"]
bg_color = Color(0.9, 0.7, 0.2, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="PlayerHUD" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 260.0
offset_bottom = 110.0
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 8.0
offset_right = -10.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 6

[node name="PlayerInfo" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="PlayerName" type="Label" parent="Panel/VBoxContainer/PlayerInfo"]
layout_mode = 2
size_flags_horizontal = 3
text = "Player"
theme_override_colors/font_color = Color(1, 0.9, 0.7, 1)

[node name="Level" type="Label" parent="Panel/VBoxContainer/PlayerInfo"]
layout_mode = 2
text = "Lv. 1"
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)

[node name="HealthBar" type="ProgressBar" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 22)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_health_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_health_fill")
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="Panel/VBoxContainer/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "100 / 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ManaBar" type="ProgressBar" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 18)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_mana_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_mana_fill")
max_value = 50.0
value = 50.0
show_percentage = false

[node name="ManaLabel" type="Label" parent="Panel/VBoxContainer/ManaBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "50 / 50"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SwingTimerContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 8

[node name="AttackIcon" type="Label" parent="Panel/VBoxContainer/SwingTimerContainer"]
layout_mode = 2
text = "ATK"
theme_override_colors/font_color = Color(0.9, 0.7, 0.2, 1)
theme_override_font_sizes/font_size = 10

[node name="SwingTimer" type="ProgressBar" parent="Panel/VBoxContainer/SwingTimerContainer"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/background = SubResource("StyleBoxFlat_swing_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_swing_fill")
max_value = 1.0
value = 0.0
show_percentage = false
